[gd_scene load_steps=14 format=3 uid="uid://5m5v82xsla1a"]

[ext_resource type="Script" path="res://Weapons/Weapon.gd" id="2"]
[ext_resource type="Script" path="res://Weapons/WeaponHitbox.gd" id="3"]
[ext_resource type="Script" path="res://Weapons/UI.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://cqxhkbyovftus" path="res://Art/Icons19/white.png" id="6_yg6sr"]

[sub_resource type="Shader" id="Shader_ps0v4"]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = SubResource("Shader_ps0v4")
shader_parameter/active = false

[sub_resource type="ParticleProcessMaterial" id="2"]
spread = 180.0
gravity = Vector3(0, 0, 0)

[sub_resource type="Animation" id="7"]
resource_name = "active_ability"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D/ChargeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"triple_shoot"
}, {
"args": [],
"method": &"triple_shoot"
}]
}

[sub_resource type="Animation" id="3"]
resource_local_to_scene = true
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D/ChargeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="4"]
resource_local_to_scene = true
resource_name = "cancel_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D/ChargeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="5"]
resource_local_to_scene = true
resource_name = "charge"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D/ChargeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="6"]
resource_local_to_scene = true
resource_name = "strong_attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D/ChargeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"triple_shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3uxni"]
_data = {
"active_ability": SubResource("7"),
"attack": SubResource("3"),
"cancel_attack": SubResource("4"),
"charge": SubResource("5"),
"strong_attack": SubResource("6")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("2")

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
material = SubResource("1")
rotation = -0.785398
offset = Vector2(5, -4)

[node name="Hitbox" type="Area2D" parent="Node2D/Sprite2D"]
collision_layer = 0
collision_mask = 20
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite2D/Hitbox"]
position = Vector2(5.65685, -4.24264)
rotation = 0.785398
disabled = true

[node name="ChargeParticles" type="GPUParticles2D" parent="Node2D/Sprite2D"]
emitting = false
amount = 15
process_material = SubResource("2")
lifetime = 0.6

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3uxni")
}

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("6")

[node name="AbilityIcon" type="TextureProgressBar" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -82.0
offset_right = 404.0
offset_bottom = 298.0
scale = Vector2(0.15, 0.15)
fill_mode = 8
texture_progress = ExtResource("6_yg6sr")
tint_progress = Color(0.25098, 0.235294, 0.235294, 0.839216)

[connection signal="area_entered" from="Node2D/Sprite2D/Hitbox" to="Node2D/Sprite2D/Hitbox" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
